# aws-crt-swift

./: .gitignore  .gitmodules  .swift-format  .swiftformat  .swiftlint.yml  CMakeLists.txt  Dockerfile  File.txt  LinuxMain.swift  Package.resolved  Package.swift  README.md  build.sh  builder.json  integ_test.sh  latest_submodules.py  macos-test.sh
Source/: .gitignore  CMakeLists.txt  ElastiCurl.swift
Source/AwsCommonRuntimeKit/: AWSCommonRuntimeKit.swift  AwsCommonRuntimeKit.swift  AwsCommonRuntimeKit.swift.in  CommonRuntimeKit.swift  PrivacyInfo.xcprivacy  Utilities.swift  utilities.swift
Source/AwsCommonRuntimeKit/auth/: AWSCredentialsProvider.swift  AWSCredentialsProviderCachedConfig.swift  AWSCredentialsProviderChainConfig.swift  AWSCredentialsProviderChainDefaultConfig.swift  AWSCredentialsProviderImdsConfig.swift  AWSCredentialsProviderProfileOptions.swift  AWSCredentialsProviderShutdownOptions.swift  AWSCredentialsProviderX509Config.swift  Credentials.swift  CredentialsProvider.swift  CredentialsProviderCallbackData.swift  CredentialsProviderStaticConfig.swift
Source/AwsCommonRuntimeKit/crt/: AWSCommonRuntimeError.swift  AWSDate.swift  AWSString.swift  Allocator.swift  Atomic.swift  AwsCommonRuntimeError.swift  AwsError.swift  AwsString.swift  ByteBuffer.swift  ByteCursor.swift  CBOR.swift  CRTError.swift  CRTErrorGenerated.swift  CStruct.swift  Checksums.swift  CommandLine.swift  CommandLineParser.swift  CommonRuntimeError.swift  ContinuationCore.swift  ContinuationFuture.swift  DateFormat.swift  DateMonth.swift  DayOfWeek.swift  EC.swift  Future.swift  Hash.swift  Lock.swift  Logger.swift  Queue.swift  ShutDownCallbackOptions.swift  ShutdownCallbackCore.swift  ShutdownCallbackOptions.swift  Utilities.swift
Source/AwsCommonRuntimeKit/event-stream/: EventStreamChannelHandler.swift  EventStreamHeader.swift  EventStreamHeaderType.swift  EventStreamMessage.swift  EventStreamMessageDecoder.swift  EventStreamMessageEncoder.swift
Source/AwsCommonRuntimeKit/event-streams/: CRTEventStreamChannelHandler.swift  CRTEventStreamChannelHandlerOptions.swift  CRTEventStreamHeader.swift  CRTEventStreamHeaders.swift  CRTEventStreamMessage.swift  EventStreamHeaderType.swift
Source/AwsCommonRuntimeKit/http/: AWSHttpProxyAuthenticationType.swift  CRTHttpResponse.swift  HTTP1Stream.swift  HTTP2ClientConnection.swift  HTTP2Error.swift  HTTP2Settings.swift  HTTP2Stream.swift  HTTP2StreamManager.swift  HTTP2StreamManagerOptions.swift  HTTPClientConnection.swift  HTTPClientConnectionManager.swift  HTTPClientConnectionManagerCallbackCore.swift  HTTPClientConnectionManagerMetrics.swift  HTTPClientConnectionOptions.swift  HTTPHeader.swift  HTTPHeaderBlock.swift  HTTPHeaderCompression.swift  HTTPMessage.swift  HTTPMonitoringOptions.swift  HTTPProxyAuthenticationType.swift  HTTPProxyConnectionType.swift  HTTPProxyEnvSettings.swift  HTTPProxyEnvType.swift  HTTPProxyOptions.swift  HTTPRequest.swift  HTTPRequestBase.swift  HTTPRequestOptions.swift  HTTPStream.swift  HTTPStreamCallbackCore.swift  HTTPVersion.swift  HttpClientConnection.swift  HttpClientConnectionCallbackData.swift  HttpClientConnectionCallbackDataCore.swift  HttpClientConnectionManager.swift  HttpClientConnectionManagerCallbackCore.swift  HttpClientConnectionOptions.swift  HttpClientConnectionProxyOptions.swift  HttpConnection.swift  HttpConnectionError.swift  HttpHeader.swift  (+20 more)
Source/AwsCommonRuntimeKit/io/: AddressRecordType.swift  Bootstrap.swift  ClientBootstrap.swift  ClientBootstrapCallbackData.swift  ClientBootstrapOptions.swift  EventLoopGroup.swift  HostAddress.swift  HostAddressType.swift  HostResolutionConfig.swift  HostResolveCore.swift  HostResolver.swift  HostResolverCore.swift  LogLevel.swift  Logger.swift  Logging.swift  ResolverOptions.swift  SocketDomain.swift  SocketOptions.swift  SocketType.swift  Stream.swift  StreamCore.swift  StreamSeekType.swift  TLSConnectionOptions.swift  TLSContext.swift  TLSContextOptions.swift  TLSSecitemOptions.swift  TlsConnectionOptions.swift  TlsContext.swift  TlsContextOptions.swift  TlsMode.swift
Source/AwsCommonRuntimeKit/mqtt/: IoTSDKMetrics.swift  Mqtt5.swift  Mqtt5Client.swift  Mqtt5Enums.swift  Mqtt5Options.swift  Mqtt5Packets.swift  Mqtt5Types.swift  MqttClient.swift  MqttConnection.swift  MqttConnectionCallbackData.swift  MqttQos.swift  MqttRequestRespondClient.swift  MqttRequestResponseClient.swift  MqttReturnCode.swift  MultiSubAckCallbackData.swift  OpCompleteCallbackData.swift  PubCallbackData.swift  SubAckCallbackData.swift
Source/AwsCommonRuntimeKit/mqtt5/: Mqtt5.swift
Source/AwsCommonRuntimeKit/sdkutils/: AWSProfile.swift  AWSProfileCollection.swift  AWSProfileProperty.swift  AWSProfileSourceType.swift  CRTAWSEndpointsRequestContext.swift  CRTAWSEndpointsResolvedEndpoint.swift  CRTAWSEndpointsResolvedEndpointType.swift  CRTAWSEndpointsRuleEngine.swift  CRTAWSProfile.swift  CRTAWSProfileCollection.swift  CRTAWSProfileProperty.swift  CRTAWSProfileSourceType.swift  EndpointProperty.swift  FileBasedConfigSectionType.swift  FileBasedConfigSourceType.swift  FileBasedConfiguration.swift  FileBasedConfigurationSection.swift  FileBasedConfigurationSectionProperty.swift  Profile.swift  ProfileCollection.swift  ProfileProperty.swift  ProfileSourceType.swift
Source/Canary/Mqtt5Canary/: Mqtt5Canary.swift
Source/Elasticurl/: CommandLine.swift  Elasticurl.swift  ElasticurlOptions.swift  ElasticurlUtility.swift  main.swift
Source/LibCrypto/: shim.h
Source/LibNative/: CommonRuntimeError.h  module.modulemap
Source/Script/: CRTErrorGenerator.swift
Test/: CMakeLists.txt  XCTestManifests.swift
Test/AwsCommonRuntimeKitTests/: AwsCommonRuntimeKitTests.swift  CrtXCBaseTestCase.swift  Utility.swift  XCBaseTestCase.swift
Test/AwsCommonRuntimeKitTests/Resources/: example_credentials.txt  example_profile.txt  example_sso_profile.txt  stream-test.txt
Test/AwsCommonRuntimeKitTests/auth/: AWSCredentialsProviderTests.swift  AWSSignerTests.swift  (+10 more)
Test/Elasticurl/: Elasticurl.swift  Package.swift
Test/Mqtt5ManualPubackSample/: Mqtt5ManualPubackSample.swift  Package.swift
(+1204 files in other folders)
